--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dateformat": "^5.0.3",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.6"
   }
 }
